# rs_gbrain

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: PARITY.md  integrate-unthinkclaw.md
plugins/hermes/: plugin.json
plugins/openclaw/: SKILL.md
scripts/: github-metadata.sh
src/: brief_sync.rs  claw_test.rs  db.rs  dream.rs  embed.rs  engine.rs  extract.rs  hybrid.rs  lib.rs  local_http.rs  mcp.rs  minions.rs  plugin.rs  query.rs  search.rs  tenant.rs  typed_edges.rs  types.rs
tests/: graph_typed.rs  nightly_dream.rs  smoke.rs  tenant_isolation.rs
