[package]
name = "rs_gbrain"
version = "0.1.0"
edition = "2021"
description = "Local SQLite personal knowledge brain — gbrain-shaped, no OAuth"
license = "MIT"
repository = "https://github.com/undivisible/rs_gbrain"
keywords = ["knowledge", "rag", "sqlite", "agent", "openclaw"]
categories = ["database", "command-line-utilities"]

[[bin]]
name = "rs_gbrain"
path = "src/bin/rs_gbrain.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"