[package]
name = "gbrain"
version = "0.1.0"
edition = "2021"
description = "Local-first hybrid RAG knowledge brain: SQLite, FTS5, typed graph edges, embeddings, dream cycle — Rust port of gbrain"
license = "MPL-2.0"
repository = "https://github.com/undivisible/rs_gbrain"
keywords = ["knowledge-graph", "rag", "sqlite", "embeddings", "openclaw", "hermes", "agent-memory", "fts5", "gbrain"]
categories = ["database", "command-line-utilities", "science"]

[[bin]]
name = "rs_gbrain"
path = "src/bin/rs_gbrain.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

axum = { version = "0.8", optional = true }

[features]
default = []
fastembed = ["dep:fastembed"]
local-http = ["dep:axum", "tokio/net"]

[dependencies.fastembed]
version = "4"
optional = true

[dev-dependencies]
tempfile = "3"